--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,6 @@
-sonar.projectKey=cyu-scg_test-sonar
-sonar.organization=cyu-scg
-
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=test-sonar
-#sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8z
+sonar.projectKey=your_sonarcloud_project_key
+sonar.organization=your_sonarcloud_organization
+sonar.sources=modules, themes, src
+sonar.exclusions=**/vendor/**,**/core/**,**/node_modules/**,**/sites/**,**/*.yml
+sonar.language=php
+sonar.php.file.suffixes=php,module,inc,install,test
